# yml2dfd

./: README.md  pyproject.toml
yml2dfd/: yml2dfd.py
yml2dfd/examples/: simple.yml
yml2dfd/test/: test_simple.py
yml2dfd/test/data/: __init__.py  example.py
